Fix horizontal scrolling on touch devices; begin design of invitation email

--- a/HoneyWedding/Content/parallax.css
+++ b/HoneyWedding/Content/parallax.css
@@ -1,7 +1,9 @@
 ﻿.mdl-layout__content {
     perspective: 1px;
-    /*-webkit-perspective-origin-x: 100%;
-    perspective-origin-x: 100%;*/
+    -webkit-perspective-origin-x: 100%;
+    perspective-origin-x: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -17,8 +19,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    /*-webkit-transform-origin-x: 100%;
-    transform-origin-x: 100%;*/
+    -webkit-transform-origin-x: 100%;
+    transform-origin-x: 100%;
 }
 
 .parallax__layer--base {
@@ -27,8 +29,8 @@
 
 .parallax__layer--back {
     transform: translateZ(-1px) scale(2);
-    -webkit-transform-origin-x: calc(100vw / 2);
+    /*-webkit-transform-origin-x: calc(100vw / 2);
     transform-origin-x: calc(100vw / 2);
-    -moz-transform-origin: calc(100vw / 2) calc((100vh - 64px) / 2); /*moz require two-value syntax*/
+    -moz-transform-origin: calc(100vw / 2) calc((100vh - 64px) / 2); /*moz require two-value syntax*/*/
 }
 
